--- a/Vim.wiki
+++ b/Vim.wiki
@@ -19,7 +19,12 @@
 * `z=` pour avoir la liste des corrections et `1z=` pour corriger avec la premère occurence de la liste
 * voir http://blog.fedora-fr.org/metal3d/post/Correction-orthographique-et-grammaticale-avec-Vim pour plus d'info sur l'autocorrection
 * plugin [[https://github.com/osyo-manga/vim-over|vim-over]] `:OverCommandLine`
-* vim pour écrire : http://naperwrimo.org/wiki/index.php?title=Vim_for_Writers
+
+==== Mode vim pour écrire et prendre de note ====
+* vim pour écrire : http://naperwrimo.org/wiki/index.php?title=Vim_for_Writers et aussi https://afterdraft.co/~aardvark/writing-with-vim
+* installation du plugin Goyo avec function + mapping
+* TODO: automcomplétion de mot et modification taill police
+* TODO: 'reedes/vim-pencil'
 
 == Mode vim ==
 
