Fix typo internation

--- a/diary/2015-03-21.wiki
+++ b/diary/2015-03-21.wiki
@@ -90,5 +90,5 @@ voir ~/race_against_the_machine
 
 Sismondis et Fourier point de vue défendu par Jorion -> se pose en plus radical qu' Ars Industrialis (voir taxe Simondis)
 
-voir Marcel Mauss sur l'internation 
+voir Marcel Mauss sur l'international 
 
