Fix typo guiseppe

--- a/diary/2014-12-05.wiki
+++ b/diary/2014-12-05.wiki
@@ -19,7 +19,7 @@ Le monde de l'incalculable : morphogénèse des organismes dans la nature
 Concernant la crise de 2007 à propos du 'high frequency trading' Alexandre Laumonier :
 "Certaines personnes travaillant dans de grandes écoles de finance m’ont ainsi confirmé avoir reçu en 2007 des coups de fil de banques pour les inciter à former des gens maîtrisant davantage les algorithmes. Les modèles mathématiques ayant failli, il fallait trouver une autre vache à lait."
 
-== Guiseppe Longo ==
+== Giuseppe Longo ==
 
 téléonomie
 
