--- a/diary/2014-10-27.wiki
+++ b/diary/2014-10-27.wiki
@@ -1,7 +1,7 @@
 ==Vim meetup==
 
 ===Startify===
- * [ ] écran de démarrage, complément à NerdTRee
+ * [ ] écran de démarriage, complément à NerdTRee
  * [ ] Gestion des session
 	* [ ]  enregistrement de l'historique
 	
