--- a/Command line collection.wiki
+++ b/Command line collection.wiki
@@ -40,7 +40,14 @@ bc << .
 `lprm -` pour effacer la liste d'attente
 `lpr -o lansdcape myfile.txt` pour imprimer en mode paysage
 
+* téléchargé un fichier en ligne de commande depuis le ftp
+`wget ftp://seojmp:cg0_t6ko@ftp.jobintree.com/sitemap.xml` 
+
+
 * voir les connexions
 `sudo /usr/sbin/tcpdump -vlnettti pflog0` (ou pflog0 est l'interface reseau)
+
+* joindre des lignes d'une sortie de commande comme 'grep' par exemple
+`paste -s -d","` #séparer par des virgules
 
 
