--- a/Mutt.wiki
+++ b/Mutt.wiki
@@ -8,6 +8,7 @@
 [[http://sheet.shiar.nl/mutt|Mutt cheat sheet]]
 [[http://wcm1.web.rice.edu/mutt-tips.html|Some tips]]
 [[http://www.calmar.ws/mutt/|Some other good tips]]
+[[http://shebangthedolphins.net/mutt.html|Other good tips]]
 
 *address book*
 # install goobook
@@ -52,6 +53,11 @@ just press `;t` (apply tag on all tagged mail => untagged)
 
 _Open a link_ `<C-b>`
 
+_Move mail in a folder_
+# `T` Tag messages to move
+# `;s` to move messages
+
+
 _Attach files_ 
 press "a" and for multiple file at once use "t" to tag the files you want 
 pree "enter" to add files
@@ -59,6 +65,7 @@ pree "enter" to add files
 == Tips ==
 
 # si l'url ne s'affiche pas dans la pager (vim par ex.) alors se positionner sur le mail dans l'index et faire un ctrl-b pour voir toutes les urls du mail
+# AccusÃ© rÃ©ception : `Disposition-Notification-To: <myemailaddress@domain>` dans le header
 
 
 == TODO ==
